# research_lab

./: .env.example  .gitignore  AGENTS.md  DISCORD_SETUP.md  MANIFEST.in  README.md  SLACK_SETUP.md  SPEC.md  coverage.md  lab.md  lab.py  pyproject.toml
coverage_state/700.HK/: kpis.md  locked_sections.md  regime_history.md  standing_thesis.md
coverage_state/9988.HK/: kpis.md  locked_sections.md  regime_history.md  standing_thesis.md
coverage_state/CRM.US/: kpis.md  locked_sections.md  regime_history.md  standing_thesis.md
mcp_servers/eodhd/: .env.example  README.md  client.py  server.py
prompts/: director.md
prompts/coverage/: agent.md  template.md
prompts/regional/: china_ah.md  hk.md  us.md
prompts/specialists/: macro.md  risk.md  sector.md  valuation.md
skills/: peer_regression.py
